--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 /* background: #2F303A; */
 /* цвет футера rgba(255, 255, 255, 0.6); */
 /* background team color: #F5F4FA; */
+/* border-color #EEEEEE; */
+
 
 :root {
     --primary-text-color: #212121;
@@ -15,6 +17,8 @@
     --footer-color:rgba(255, 255, 255, 0.6);
     --back-color:#2F303A;
     --back-second-color:#F5F4FA;
+    --border-color:#EEEEEE;
+
  
 }
 
@@ -38,7 +42,16 @@ body {
 
 ul {
     list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+
 /* 
 .container {
     width: 1200px;
@@ -58,11 +71,9 @@ ul {
         letter-spacing: 0.03em;
         text-decoration:none ;
 
-            height: 31px;
-            margin-left: 15px;
-            margin-right: 93px;
-            margin-top: 25px;
-            margin-bottom: 24px;
+        padding-top: 24px;
+        padding-bottom: 25px;
+        margin-right: 93px;
 }
 
 .logo:hover
@@ -81,6 +92,10 @@ ul {
  }
 /* header */
 
+.header {
+    border-bottom: 1px solid var(--border-color);
+}
+
 .header .container {
     display: flex;
 }
@@ -92,12 +107,12 @@ ul {
 }
 
 .site-nav {
-    width: 281px;
-    height: 16px;
-    justify-content: space-between;
-    margin-top: 32px;
-    margin-right: 344px;
     display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    gap: 50px;
+    margin-left: auto;
+
 }
 
 .site-nav .link {
@@ -108,7 +123,7 @@ ul {
         line-height: 1.14;
         letter-spacing: 0.02em;
         text-decoration: none;
-
+        gap: 50px;
 }
 
 .site-nav .link:hover,
@@ -125,11 +140,12 @@ ul {
 }
 
 .auth-nav {
-    width: 307px;
-    height: 16px;
-    justify-content: space-between;
-    margin-top: 32px;
     display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    gap: 50px;
+    margin-left: auto;
+    
 }
 
 .auth-nav .link {
@@ -156,11 +172,9 @@ color: var(--accent-color);
 /* main-section */
 
 .main-section {
-    width: 1600px;
-    height: 600px;
-    background-color: var(--back-color);
-    margin-bottom:  94px;
-    margin-top: 0px;
+        background-color: var(--back-color);
+        padding-top: 200px;
+        padding-bottom: 200px;
 }
 
 
@@ -177,29 +191,55 @@ color: var(--accent-color);
 
        
         width: 696px;
-        margin-left: 452px;
-        margin-right: 452px;
-        margin-top: 0px;
-        padding-top: 200px;
-        margin-bottom: 0px;
-
+        margin-left: auto;
+        margin-right: auto;
+     
 }
+/* button */
+.button {
+        color: var(--primary-white-color);
+        background-color:var(--accent-color);
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.2;  
+        letter-spacing: 0.06em;
+        text-decoration: none; 
+        cursor: pointer; 
+        
+        width: 216px;
+        height: 50px;
+        margin-left: 692px;
+        margin-right: 692px;
+        margin-top: 30px;
+        border: 0px;
+        border-radius: 4px;
+       
+}
+
+ .main-section .button:hover,
+ .main-section .button:focus {
+        color: var(--primary-white-color);
+ }
 
 /* meaning section */
 
 .container {
     width: 1200px;
-    margin-left: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 15px;
+
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .feature-list {
     display: flex;
-    width: 1170px;
-    padding-left: 0px;
-    margin-left: 15px;
-    margin-bottom: 94px;
-    justify-content: space-between;
-
+    gap: 30px;
 }
 
 .feature-box {
@@ -251,52 +291,49 @@ color: var(--accent-color);
 
 .activity-list {
         display: flex;
-        justify-content: space-between;
-        width: 1170px;
-        margin-top: 0px;
-        margin-bottom: 94px;
-        margin-left: 15px;
-        padding: 0px;
+        gap: 30px; 
 }
 
 
 /* Our team */
 
-.our-teams {
-        background-color: var(--back-second-color);
-        width: 1600px;
-        padding-left: 0px;
-        padding-top: 0px;
-        margin-bottom: 94px;
+
+.section.color {
+    background-color: var(--back-second-color);
 }
+
+
 
 .section-team {
         color: var(--primary-text-color);
+        background-color: var(--back-second-color);
         font-weight: 700;
         font-size: 36px;
         line-height: 1.2;
         letter-spacing: 0.03em;
         text-align: center;
+        padding-bottom: 50px;
 
-        padding-top: 94px;
-        margin-top: 0px;
-        margin-bottom: 50px;
 
 }
 
 .team-list {
         display: flex;
-        width: 1170px;
-        padding: 0;
-        margin-top: 0px;
-        margin-bottom: 94px;
-        margin-left: 215px;
-        justify-content: space-between;
+        gap: 30px;
+        flex-wrap: wrap;
+        align-items: center;
 }
 
 .team {
         background-color: var(--primary-white-color);
         width: 270px;
+        display: block;
+        max-width: 100%;
+        height: auto;
+
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+    
 }
 
 .team-list .team-title {
@@ -313,52 +350,21 @@ color: var(--accent-color);
 
 .team-list .team-description {
         color: var(--title-text-color);
-        font-weight: 400;
         font-size: 16px;
         line-height: 1.2;
         letter-spacing: 0.03em;
 
         text-align: center;
-        margin-top: 0px;
-        margin-bottom: 0px;
 
 }
 
-/* button */
-.button {
-        color: var(--primary-white-color);
-        background-color:var(--accent-color);
-        font-family: inherit;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.2;  
-        letter-spacing: 0.06em;
-        text-decoration: none; 
-        cursor: pointer; 
-        
-        width: 216px;
-        height: 50px;
-        margin-left: 692px;
-        margin-right: 692px;
-        margin-top: 30px;
-        border: 0px;
-       
-        
-       
-
-}
-
- .main-section .button:hover,
- .main-section .button:focus {
-        color: var(--primary-white-color);
- }
 
  /* contact section */
 
  .footer {
         background-color: var(--back-color);
-        width: 1600px;
-        height: 252px;
+        padding-top: 60px;
+        padding-bottom: 60px;
  }
 
  .logo-bottom {
@@ -370,8 +376,7 @@ color: var(--accent-color);
         letter-spacing: 0.03em;
         text-decoration: none;
 
-        margin-left: 215px;
-        margin-top: 60px;
+    
         margin-bottom: 20px;
         display: inline-block;
  }
@@ -389,10 +394,10 @@ color: var(--accent-color);
  }
 
 .contacts {
-    margin-left: 215px;
-    padding: 0px;
-    margin-top: 0;
-    margin-bottom: 0px;
+   margin-top: 0px;
+   margin-bottom: 0px;
+   
+
 }
 
 .contacts .address {
@@ -402,6 +407,8 @@ color: var(--accent-color);
     line-height: 1.7px;
     letter-spacing: 0.03em;
     text-decoration: none;
+    margin-bottom: 9px;
+
 }
 
 .contacts .address:hover,
@@ -425,19 +432,20 @@ color: var(--accent-color);
 
 /* Portfolio */
 
-.portfolio-container {
+/* .portfolio-container {
 
     width: 1200px;
     margin-left: 200px;
     margin-top: 94px;
-}
+} */
+
 
 .portfolio-button {
     display: flex;
-    justify-content: space-between;
-    margin-left: 312px;
-    margin-right: 312px;
+    justify-content: center;
+    gap: 9px;
     margin-bottom: 34px;
+    
 }
 
 .portfolio-button .button-link  {
@@ -448,6 +456,10 @@ color: var(--accent-color);
     line-height: 1.7;
     letter-spacing: 0.03em;
     display: auto;
+    background-color: var(--back-second-color);
+    border-radius: 4px;
+    border-color: transparent;
+    padding: 6px 22px;
 }
 
 .portfolio-button .button-link:hover,
@@ -458,13 +470,15 @@ color: var(--accent-color);
 
 .portfolio-list {
     display: flex;
-    width: 1170px;
-    margin-top: 0px;
-    margin-bottom: 94px;
-    padding-left: 0px;
     flex-wrap: wrap;
     gap: 30px;
+}
 
+.portfolio-text {
+    padding: 20px 24px;
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
 }
 
 .portfolio-list .portfolio-title {
@@ -473,6 +487,8 @@ color: var(--accent-color);
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
+
+    padding-bottom: 4px;
 }
 
 .portfolio-list .portfolio-description {
